# gedit-llm-plugin

./: .gitignore  NOTES.md  meson.build
docs/superpowers/plans/: 2026-05-31-libllmghost-test-suite.md  2026-06-01-partial-ghost-acceptance.md  2026-06-04-json-settings-layer.md  2026-06-04-mistral-codestral-backend.md  2026-06-04-openai-compat-backend.md  2026-06-05-generic-backend.md  2026-06-06-secret-storage.md  2026-06-07-sse-streaming.md  2026-06-09-multiline-ghost.md
docs/superpowers/specs/: 2026-05-31-libllmghost-test-suite-design.md  2026-06-01-partial-ghost-acceptance-design.md  2026-06-04-json-settings-layer-design.md  2026-06-04-mistral-codestral-backend-design.md  2026-06-04-openai-compat-backend-design.md  2026-06-05-generic-backend-design.md  2026-06-06-secret-storage-design.md  2026-06-07-sse-streaming-design.md  2026-06-09-multiline-ghost-design.md
examples/: anthropic.json  gemini.json
lib/: llmghost-backend-factory.c  llmghost-backend-factory.h  llmghost-backend-internal.h  llmghost-backend.c  llmghost-backend.h  llmghost-controller-internal.h  llmghost-controller.c  llmghost-controller.h  llmghost-fake-backend.c  llmghost-fake-backend.h  llmghost-fim-tokens.c  llmghost-fim-tokens.h  llmghost-generic-backend-internal.h  llmghost-generic-backend.c  llmghost-generic-backend.h  llmghost-http-util.c  llmghost-http-util.h  llmghost-mistral-backend-internal.h  llmghost-mistral-backend.c  llmghost-mistral-backend.h  llmghost-ollama-backend-internal.h  llmghost-ollama-backend.c  llmghost-ollama-backend.h  llmghost-openai-backend-internal.h  llmghost-openai-backend.c  llmghost-openai-backend.h  llmghost-overlay.c  llmghost-overlay.h  llmghost-secret-store.c  llmghost-secret-store.h  llmghost-settings-internal.h  llmghost-settings.c  llmghost-settings.h  llmghost-sse-parser.c  llmghost-sse-parser.h  llmghost-text-util.c  llmghost-text-util.h  llmghost.h  meson.build
plugin/: llmghost-configurable.c  llmghost-configurable.h  llmghost-plugin.c  llmghost-plugin.h  llmghost.plugin  meson.build
tests/: demo.c  meson.build  mock-backend.c  mock-backend.h  test-backend-signal.c  test-controller.c  test-fake-backend.c  test-fim-tokens.c  test-generic-body.c  test-generic-stream.c  test-ghost-accept.c  test-http-util.c  test-mistral-body.c  test-mock-backend.c  test-ollama-body.c  test-openai-body.c  test-openai-stream.c  test-secret-store.c  test-settings.c  test-sse-parser.c  test-text-util.c
